--- a/NodeJS-Web-Server/package.json
+++ b/NodeJS-Web-Server/package.json
@@ -11,7 +11,10 @@
   "author": "Gornakov",
   "license": "MIT",
   "dependencies": {
-    "multiparty": "^4.1.3",
-    "shortid": "^2.2.8"
+    "gulp": "3.9.1",
+    "gulp-clean-css": "3.4.0",
+    "gulp-rename": "1.2.2",
+    "multiparty": "4.1.3",
+    "shortid": "2.2.8"
   }
 }
