Add database connection logic

--- a/MongoDB-Mongoose-Exercise/package.json
+++ b/MongoDB-Mongoose-Exercise/package.json
@@ -16,5 +16,8 @@
     "mongoose"
   ],
   "author": "Gornakov",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mongoose": "4.10.4"
+  }
 }
