--- a/ExpressJS-and-View-Engines/package.json
+++ b/ExpressJS-and-View-Engines/package.json
@@ -11,6 +11,17 @@
     "view",
     "engines"
   ],
-  "author": "Gornakov",
-  "license": "MIT"
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "1.17.2",
+    "express": "4.15.3",
+    "gulp": "3.9.1",
+    "gulp-clean-css": "3.3.1",
+    "gulp-rename": "1.2.2",
+    "mongodb": "2.2.27",
+    "mongoose": "4.10.4",
+    "multer": "1.3.0",
+    "pug": "2.0.0-rc.2"
+  }
 }
