--- a/Architecture-and-Authentication/package.json
+++ b/Architecture-and-Authentication/package.json
@@ -20,9 +20,14 @@
   "author": "Gornakov",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "1.17.2",
+    "cookie-parser": "1.4.3",
     "express": "4.15.3",
     "express-handlebars": "3.0.0",
+    "express-session": "1.15.3",
     "mongoose": "4.10.5",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
     "typings": "2.1.1"
   }
 }
