--- a/Architecture-and-Authentication-HW/package.json
+++ b/Architecture-and-Authentication-HW/package.json
@@ -15,13 +15,17 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.17.2",
+    "cookie-parser": "1.4.3",
     "express": "4.15.3",
+    "express-session": "1.15.3",
     "gulp": "3.9.1",
     "gulp-clean-css": "3.3.1",
     "gulp-rename": "1.2.2",
     "mongodb": "2.2.27",
     "mongoose": "4.10.4",
     "multer": "1.3.0",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
     "pug": "2.0.0-rc.2",
     "typings": "2.1.1"
   }
